Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-5748

Assertion `status_var.memory_used == 0' fails on disconnect after opening an OQGRAPH table

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.8
    • 10.0.9
    • None
    • None

    Description

      let $have_oqgraph = `select count(*) from information_schema.engines 
      	where engine='OQGRAPH' and support = 'YES'`;
       
      if (!$have_oqgraph) 
      {
      	if (!$HA_OQGRAPH_SO)
      	{
      		--skip No OQGRAPH
      	}
      	install soname 'ha_oqgraph';
      }
       
      --connect (con1,localhost,root,,)
       
      CREATE TABLE oq_backing (
        origid INT UNSIGNED NOT NULL,
        destid INT UNSIGNED NOT NULL,
        weight DOUBLE NOT NULL,
        PRIMARY KEY (origid, destid),
        KEY (destid)
      );
       
      CREATE TABLE oq_table (
        latch VARCHAR(32) NULL,
        origid BIGINT UNSIGNED NULL,
        destid BIGINT UNSIGNED NULL,
        weight DOUBLE NULL,
        seq BIGINT UNSIGNED NULL,
        linkid BIGINT UNSIGNED NULL,
        KEY (latch, origid, destid) USING HASH,
        KEY (latch, destid, origid) USING HASH
      )
      ENGINE=OQGRAPH
      data_table='oq_backing' origid='origid' destid='destid' weight='weight';
       
      flush tables;
      show fields in oq_table;
      --disconnect con1
       
      --connection default
      SHOW TABLES;

      mysqld: sql/sql_class.cc:1636: virtual THD::~THD(): Assertion `status_var.memory_used == 0' failed.
      140226 21:48:44 [ERROR] mysqld got signal 6 ;

      #6  0x00007fa7526cf621 in *__GI___assert_fail (assertion=0xee0fa7 "status_var.memory_used == 0", file=<optimized out>, line=1636, function=0xee35f0 "virtual THD::~THD()") at assert.c:81
      #7  0x0000000000636486 in THD::~THD (this=0x7fa74ac87070, __in_chrg=<optimized out>) at 10.0/sql/sql_class.cc:1636
      #8  0x000000000063660e in THD::~THD (this=0x7fa74ac87070, __in_chrg=<optimized out>) at 10.0/sql/sql_class.cc:1641
      #9  0x00000000005b7b9f in unlink_thd (thd=0x7fa74ac87070) at 10.0/sql/mysqld.cc:2722
      #10 0x00000000005b7eff in one_thread_per_connection_end (thd=0x7fa74ac87070, put_in_cache=true) at 10.0/sql/mysqld.cc:2833
      #11 0x00000000007877d7 in do_handle_one_connection (thd_arg=0x7fa74ac87070) at 10.0/sql/sql_connect.cc:1390
      #12 0x0000000000787484 in handle_one_connection (arg=0x7fa74ac87070) at 10.0/sql/sql_connect.cc:1293
      #13 0x0000000000a2a891 in pfs_spawn_thread (arg=0x7fa74cf74a30) at 10.0/storage/perfschema/pfs.cc:1853
      #14 0x00007fa754273b50 in start_thread (arg=<optimized out>) at pthread_create.c:304
      #15 0x00007fa75277ea7d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

      revision-id: svoj@mariadb.org-20140226085528-80vzk8f2c4b4ugxm
      revno: 4008
      branch-nick: 10.0

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.