MDEV-5748 Assertion `status_var.memory_used == 0' fails on disconnect after opening an OQGRAPH table

make sure MY_THREAD_SPECIFIC is not set for memroot that can be
transferred between threads